fixed map icon mobile nav bar

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -78,7 +78,7 @@
 
 .navbar-toggler-left {
   position: absolute;
-  left: 5%;
+  left: 4%;
 }
 
 .navbar-toggler i {
